--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -2,40 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
-  font-family: "Inter", sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+    font-family: 'Inter', sans-serif;
 }
 
 #__next {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
+    width: 100%;
+    min-height: 100vh;
+    padding: 0;
 }
 
-.containerPage{
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
+.containerPage {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .colorPlace::placeholder {
-  color: #6b7280;
+    color: #6b7280;
 }
 
-.inputNumber input[type="number"] {
-  -moz-appearance: textfield; /* Firefox */
+.inputNumber input[type='number'] {
+    -moz-appearance: textfield; /* Firefox */
 }
 
-.inputNumber input[type="number"]::-webkit-inner-spin-button,
-.inputNumber input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0; /* Elimina el margen por defecto en Chrome */
+.inputNumber input[type='number']::-webkit-inner-spin-button,
+.inputNumber input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0; /* Elimina el margen por defecto en Chrome */
 }
-
