--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -36,3 +36,19 @@ body {
     -webkit-appearance: none;
     margin: 0; /* Elimina el margen por defecto en Chrome */
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+    color: #fff;
+    background: #fb923c;
+    font-size: 1rem;
+    width: 2.75rem;
+    height: 2.75rem;
+    border-radius: 100%;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    font-size: 1rem;
+    font-weight: bold;
+}
