--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -52,3 +52,19 @@ body {
     font-size: 1rem;
     font-weight: bold;
 }
+
+.car-images .swiper-button-next,
+.car-images .swiper-button-prev {
+    color: #c4c4c4;
+    background: #f4f4f4;
+    font-size: 1rem;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+}
+
+.car-images .swiper-button-next::after,
+.car-images .swiper-button-prev::after {
+    font-size: 0.8rem;
+    font-weight: bold;
+}
