--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -68,3 +68,16 @@ body {
     font-size: 0.8rem;
     font-weight: bold;
 }
+
+@media (max-width: 640px) {
+    .car-images .swiper-button-next,
+    .car-images .swiper-button-prev {
+        width: 1.5rem;
+        height: 1.5rem;
+        top: 35px;
+    }
+    .car-images .swiper-button-next::after,
+    .car-images .swiper-button-prev::after {
+        font-size: 0.5rem;
+    }
+}
