--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -73,6 +73,21 @@ body {
   font-weight: bold;
 }
 
+.mapboxgl-map{
+  min-width: 600px;
+  min-height: 600px !important;
+  border-radius: 20px;
+}
+
+
+.mapboxgl-ctrl-attrib-inner{
+  display: none;
+}
+
+.mapboxgl-marker svg path[fill="#3FB1CE"]{
+  fill: #EA580C;
+}
+
 @media (max-width: 640px) {
   .car-images .swiper-button-next,
   .car-images .swiper-button-prev {
