--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -73,19 +73,20 @@ body {
   font-weight: bold;
 }
 
-.mapboxgl-map{
+.mapboxgl-map {
   min-width: 600px;
   min-height: 600px !important;
   border-radius: 20px;
 }
 
-
-.mapboxgl-ctrl-attrib-inner{
+.mapboxgl-ctrl-attrib-inner {
   display: none;
 }
 
-.mapboxgl-marker svg path[fill="#3FB1CE"]{
-  fill: #EA580C;
+.mapboxgl-marker svg path[fill="#3FB1CE"] {
+  fill: #ea580c;
+}
+
 .scrollVisible::-webkit-scrollbar {
   -webkit-appearance: none;
 }
